# HSLU.MEDIMG.Project

./: .gitignore  README.md  gitignore  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: evaluation_protocol.md  methods.md  problem_definition.md
notebooks/: 01_data_exploration.ipynb  02_baseline_experiments.ipynb  03_model_experiments.ipynb  04_ablation_studies.ipynb  05_results_analysis.ipynb  06_error_analysis.ipynb
notebooks/results/checkpoints/: baseline_shallow_cnn_best.pt
scripts/: run_ablation.sh  run_all_experiments.sh
src/: data.py  evaluate.py  models.py  train.py  utils.py  wandb_utils.py
