[project]
name = "pneumonia-detection"
version = "0.1.0"
description = "Pneumonia detection from chest X-rays as a clinical decision support system"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "grad-cam>=1.4.8",
    "albumentations>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
